@@ -1,6 +1,7 @@
 2009-01-25	Aapo Rantalainen <aapo.rantalainen@gmail.com>
 
 	* Jump to newly created tab
+	* Added support for -e command
 
 2008-11-12	Aapo Rantalainen <aapo.rantalainen@gmail.com>
 
